--- a/assessment_scorm/index.html
+++ b/assessment_scorm/index.html
@@ -73,7 +73,8 @@
     //   window.ReactNativeWebView.postMessage('Data from WebView / Website');
     // };
     window.addEventListener("message", message => {
-      alert(message.data) 
+      showQuestions()
+      alert(message.data)
     });
   </script>
 
