--- a/assessment_scorm/index.html
+++ b/assessment_scorm/index.html
@@ -75,7 +75,7 @@
             </div>
         </div>
 
-        <audio id="homePageAudio" autoplay>
+        <audio id="homePageAudio">
             <source src="./assets/story_content/6HNulVK5rAz_44100_48_0.mp3" type="audio/mp3">
             Your browser does not support the audio element.
         </audio>
@@ -101,14 +101,69 @@
         <div class="btn-submit-container">
             <button class="btn-submit" onclick="nextQuestion()" id="btnSubmit">Submit</button>
         </div>
-        <audio id="assessmentAudio" autoplay>
+        <audio id="assessmentAudio">
             <source src="./assets/story_content/6HAkwi7jPFl_44100_48_0.mp3" type="audio/mp3">
             Your browser does not support the audio element.
         </audio>
     </div>
 
+    <!-- final slide -->
+    <div id="scoreScreen" class="questionnaire-bg">
+        <img class="img-bg" src="./assets/mobile/6ELPsle15XD_80_P_113_0_872_654.jpg">
+        <div class="question-banner" id="scoreBanner">
+            Assessment Retake Result
+        </div>
+        <div class="card"></div>
+        <!-- passed -->
+        <div class="final-slide-content">
+            <div class="passed-card" id="passedCard">
+                <div class="card-text" id="cardText">PASSED</div>
+            </div>
+            <div class="remarks-text" id="remarksText">Congratulations!</div>
+            <div class="remarks-text" id="remarksTextFailed">Sorry you did not pass. <br> You may see this assessment again in the future.</div>
+    
+            <div id="scoreSection" class="score-section">
+                <div class="score-text" id="passingScoreText">PASSING SCORE: 70%</div>
+                <div class="score-text" id="userScoreText">YOUR SCORE: %</div>
+            </div>
+            <div class="final-instruction-text" id="txtIns">Click the End button to close this course</div>
+            <button id="endBtn" class="btn-end">End</button>
+        </div>
+
+        <audio id="failedAudioSpeech">
+            <source src="./assets/story_content/62JzEZLBqKk_44100_48_0.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+
+        <audio id="failedAudioSound">
+            <source src="./assets/story_content/6UPlJiQGUiF_44100_48_0.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+
+        <audio id="passedAudioSpeech">
+            <source src="./assets/story_content/6ZVUji9Jkxj_44100_48_0.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+
+        <audio id="passedAudioSound">
+            <source src="./assets/story_content/6V9WQkPc8wy_44100_48_0.mp3" type="audio/mp3">
+            Your browser does not support the audio element.
+        </audio>
+
+
+    </div>
+
     <!-- modal for no selected answer -->
-    <div>
+    <div class="backdrop" id="backdrop"></div>
+
+    <div class="modal" id="errModal">
+      <p class="modal-header" id="modalHeader">Invalid Answer</p>
+      <hr class="solid">
+      <p class="modal-body" id="modalBody">You must complete the question before submitting</p>
+
+      <div class="btn-modal-container" id="btnModalContainer">
+        <button onclick="closeModal()" class="btn-modal" id="btnModal">OK</button>
+      </div>
 
     </div>
   </div>
