--- a/assessment_scorm/index.html
+++ b/assessment_scorm/index.html
@@ -38,6 +38,11 @@
     flex-direction: column;
     overflow: auto;
 }
+.test {
+    position: fixed;
+    top: 50vw;
+    left: 50vw;
+}
 
   </style>
 </head>
@@ -45,7 +50,7 @@
 
   <!-- <div class="aspect-ratio-container"> -->
     <div class="disp">
-
+        <div class="test">TEXT</div>
     <div id="content"></div>
   
   </div>
